# docs/swagger.json
@@ -143,14 +143,8 @@
                 "country": {
                     "type": "string"
                 },
-                "created_at": {
-                    "type": "string"
-                },
                 "description": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "image_url": {
                     "type": "string"
@@ -163,9 +157,6 @@
                 },
                 "type": {
                     "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
